--- a/t-test dz/t-test2.ipynb
+++ b/t-test dz/t-test2.ipynb
@@ -18,20 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t-statistic: 1.845889462014165\n",
+      "t-statistic: -1.845889462014165\n",
       "p-value: 0.0751397944405015\n"
      ]
     }
    ],
    "source": [
-    "import scipy.stats as stats\n",
+    "from scipy.stats import ttest_rel\n",
     "\n",
     "time_before = [1732, 1301, 1540, 2247, 1632, 1550, 754, 1946, 1889,\n",
     "          2748, 1349, 1648, 1665, 2416, 1470, 1681, 1868, 1629,\n",
@@ -42,18 +42,17 @@
     "         1906, 1758, 1258, 2554, 612, 309, 1864, 1294, 1487, 1164, 1559,\n",
     "         491, 2286, 1270, 2069, 1553, 1629, 1704, 1623]\n",
     "\n",
+    "t_stat, p_val = ttest_rel(time_after, time_before)\n",
     "\n",
-    "t_statistic,p_value = stats.ttest_rel(time_before,time_after)\n",
-    "\n",
-    "print(f\"t-statistic: {t_statistic}\")\n",
-    "print(f\"p-value: {p_value}\")\n"
+    "print(\"t-statistic:\", t_stat)\n",
+    "print(\"p-value:\", p_val)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " Поскольку полученное p-значение (0.075) больше уровня значимости (0.05), мы не можем отвергнуть нулевую гипотезу, и принимает ее за истину.\n",
+    " Поскольку полученное p-значение (0.075) больше уровня значимости (0.05), мы не можем отвергнуть нулевую гипотезу, поэтому принимаем ее за истину.\n",
     " Соответственно, гипотеза, что после редизайна время использования личного кабинета на сайте изменилось - не верна."
    ]
   },
@@ -74,22 +73,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Считаю, что тест зависимый, потому что мы разбираем две одних и тех же группы игроков"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t-statistic: 1.845889462014165\n",
-      "p-value: 0.0751397944405015\n",
-      "Не отвергаем нулевую гипотезу. Количество патронов не изменилось после введения нововведений в игровую логику.\n"
+      "t-statistic: -2.724804185853386\n",
+      "p-value: 0.010789503820811123\n"
      ]
     }
    ],
    "source": [
-    "import scipy.stats as stats\n",
+    "from scipy.stats import ttest_rel\n",
     "\n",
     "bullets_before = [821, 1164, 598, 854, 455, 1220, 161, 1400, 479, 215,\n",
     "          564, 159, 920, 173, 276, 444, 273, 711, 291, 880,\n",
@@ -99,24 +104,18 @@
     "         1262, 829, 476, 1149, 996, 1247, 1117, 1324, 532, 1458, 898,\n",
     "         1837, 455, 1667, 898, 474, 558, 639, 1012]\n",
     "\n",
-    "t_statistic,p_value = stats.ttest_rel(time_before,time_after)\n",
+    "t_stat, p_val = ttest_rel(bullets_before, bullets_after)\n",
     "\n",
-    "print(f\"t-statistic: {t_statistic}\")\n",
-    "\n",
-    "\n",
-    "print(f'p-value: {p_value}')\n",
-    "if p_value < 0.05:\n",
-    "    print('Отвергаем нулевую гипотезу. Количество патронов изменилось после введения нововведений в игровую логику.')\n",
-    "else:\n",
-    "    print('Не отвергаем нулевую гипотезу. Количество патронов не изменилось после введения нововведений в игровую логику.')\n"
+    "print(\"t-statistic:\", t_stat)\n",
+    "print(\"p-value:\", p_val)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Поскольку p-значение (0,01) меньше выбранного уровня значимости (0,05), мы можем отвергнуть нулевую гипотезу о том, поэтому за истину берем альтернативную гипотезу. Таким образом, можно сделать вывод, что существует существенная разница между количеством используемых пуль до и после внедрения новой игровой логики."
+   ]
   }
  ],
  "metadata": {
@@ -135,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
