--- a/t-test dz/t-test2.ipynb
+++ b/t-test dz/t-test2.ipynb
@@ -18,34 +18,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t-statistic: -1.845889462014165\n",
-      "p-value: 0.0751397944405015\n"
+      "Значение t-статистики: -1.845889462014165\n",
+      "P-значение: 0.0751397944405015\n",
+      "Нет оснований отвергнуть нулевую гипотезу\n"
      ]
     }
    ],
    "source": [
-    "from scipy.stats import ttest_rel\n",
+    "from scipy import stats\n",
     "\n",
-    "time_before = [1732, 1301, 1540, 2247, 1632, 1550, 754, 1946, 1889,\n",
-    "          2748, 1349, 1648, 1665, 2416, 1470, 1681, 1868, 1629,\n",
-    "          1271, 1633, 2131, 942, 1599, 1127, 2200, 661, 1207,\n",
-    "          1737, 2410, 1486]\n",
+    "time_before = [1732, 1301, 1540, 2247, 1632, 1550, 754, 1946, 1889, 2748, 1349, 1648, 1665, 2416, 1470, 1681, 1868, 1629, 1271, 1633, 2131, 942, 1599, 1127, 2200, 661, 1207, 1737, 2410, 1486]\n",
+    "time_after = [955, 2577, 360, 139, 1618, 990, 644, 1796, 1487, 949, 472, 1906, 1758, 1258, 2554, 612, 309, 1864, 1294, 1487, 1164, 1559, 491, 2286, 1270, 2069, 1553, 1629, 1704, 1623]\n",
     "\n",
-    "time_after = [955, 2577, 360, 139, 1618, 990, 644, 1796, 1487, 949, 472,\n",
-    "         1906, 1758, 1258, 2554, 612, 309, 1864, 1294, 1487, 1164, 1559,\n",
-    "         491, 2286, 1270, 2069, 1553, 1629, 1704, 1623]\n",
+    "# Выполнение t-теста\n",
+    "t_statistic, p_value = stats.ttest_rel(time_after, time_before)\n",
     "\n",
-    "t_stat, p_val = ttest_rel(time_after, time_before)\n",
+    "# Печать результатов\n",
+    "print(\"Значение t-статистики:\", t_statistic)\n",
+    "print(\"P-значение:\", p_value)\n",
     "\n",
-    "print(\"t-statistic:\", t_stat)\n",
-    "print(\"p-value:\", p_val)"
+    "# Проверка статистической значимости при уровне alpha = 0.05\n",
+    "alpha = 0.05\n",
+    "if p_value < alpha:\n",
+    "    print(\"Отвергаем нулевую гипотезу\")\n",
+    "else:\n",
+    "    print(\"Нет оснований отвергнуть нулевую гипотезу\")\n"
    ]
   },
   {
@@ -81,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +93,8 @@
      "output_type": "stream",
      "text": [
       "t-statistic: -2.724804185853386\n",
-      "p-value: 0.010789503820811123\n"
+      "p-value: 0.010789503820811123\n",
+      "Отвергаем нулевую гипотезу\n"
      ]
     }
    ],
@@ -107,7 +112,14 @@
     "t_stat, p_val = ttest_rel(bullets_before, bullets_after)\n",
     "\n",
     "print(\"t-statistic:\", t_stat)\n",
-    "print(\"p-value:\", p_val)"
+    "print(\"p-value:\", p_val)\n",
+    "\n",
+    "# Проверка статистической значимости при уровне alpha = 0.05\n",
+    "alpha = 0.05\n",
+    "if p_val < alpha:\n",
+    "    print(\"Отвергаем нулевую гипотезу\")\n",
+    "else:\n",
+    "    print(\"Нет оснований отвергнуть нулевую гипотезу\")"
    ]
   },
   {
